Add location to challenge register modal and fix challenge fast register (#289)

--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -45,6 +45,7 @@
 				user: {
 					type: Object,
 					notify: true,
+					redlectToAttribute: true,
 					value: {}
 				},
 				inProgressRequests: {
