--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -96,6 +96,7 @@
 <link rel="import" href="common/data-providers/language/languages-provider.html">
 <link rel="import" href="common/data-providers/runner/runners-provider.html">
 <link rel="import" href="common/data-providers/user/user-by-username-provider.html">
+<link rel="import" href="common/data-providers/user/current-user-provider.html">
 <link rel="import" href="common/data-providers/task/task-by-id-provider.html">
 <link rel="import" href="common/data-providers/task/tasks-for-active-organization-provider.html">
 <link rel="import" href="common/data-providers/task/tasks-for-challenge-template-provider.html">
