--- a/app/elements/coder/challenge/available/register-to-challenge-dialog.html
+++ b/app/elements/coder/challenge/available/register-to-challenge-dialog.html
@@ -27,8 +27,18 @@
 		}
 	</style>
 	<template>
+		<iron-ajax id="updateUser"
+			method="PUT"
+			handle-as="json"
+			content-type="application/json"
+			with-credentials="true"
+			on-response="_onResponse"
+			on-error="_onError">
+		</iron-ajax>
 		<my-teams-provider data="{{teams}}"></my-teams-provider>
-		<coduno-iron-ajax 
+		<locations-by-challenge-canonical-name-provider canonical-name="[[challenge.canonicalName]]" data="{{locations}}"></locations-by-challenge-canonical-name-provider>
+		<current-user-provider data="{{user}}"></current-user-provider>
+		<coduno-iron-ajax
 			id="registerRequest"
 			method="PUT"
 			with-credentials="true"
@@ -52,8 +62,40 @@
 				<p>You are currently not part of any team, if you wish to participate as a team,
 					 head to your profile or click <a on-click="_goToCreateTeam">here</a> to create one. </p>
 			</template>
+			<paper-dropdown-menu label="Location" selected-item="{{selectedLocation}}" >
+				<paper-listbox class="dropdown-content" selected="0">
+					<template is="dom-repeat" items="{{locations}}">
+						<option value="{{item.id}}">{{item.name}}</option>
+					</template>
+				</paper-listbox>
+			</paper-dropdown-menu>
+			<template is="dom-if" if="[[showNameEdit]]">
+				<p>If you want to participate on site you must input your first and last name</p>
+				<form is="iron-form" id="form">
+					<paper-input
+						type="text"
+						label="First name"
+						value="{{user.firstName}}"
+						minLength="2"
+						maxLength="40"
+						pattern="^[\w-\. ]{2,40}$"
+						error-message="Must be between 2 and 40 chars and only contain letters."
+						required="true">
+					</paper-input>
+					<paper-input
+						type="text"
+						label="Last name"
+						value="{{user.lastName}}"
+						minLength="2"
+						maxLength="40"
+						pattern="^[\w-\. ]{2,40}$"
+						error-message="Must be between 2 and 40 chars and only contain letters."
+						required="true">
+					</paper-input>
+				</form>
+			</template>
 			<div id="buttons">
-				<paper-button class="primary" raised on-click="_register">Register</paper-button>
+				<paper-button class="primary" raised on-click="_register" disabled="[[registerDisabled]]">Register</paper-button>
 				<paper-button class="secondary" dialog-dismiss>Cancel</paper-button>
 			</div>
 		</paper-dialog>
@@ -63,15 +105,44 @@
 	<script>
 		Polymer({
 			is: 'register-to-challenge-dialog',
+			properties: {
+				showNameEdit: {
+					value: false
+				},
+				registerDisabled: {
+					notify: true,
+					value: false
+				}
+			},
 			behaviors: [
 				Behaviors.AppConnection
 			],
 			observers: [
-				'_teamsLoaded(teams)'
+				'_teamsLoaded(teams)',
+				'_locationsLoaded(locations)',
+				'_selectedLocationChanged(selectedLocation)'
 			],
+			listeners: {
+				'keyup': '_updateRegisterDisabled'
+			},
+			_updateRegisterDisabled: function(){
+				var formValid = !!this.$$('#form') && this.$$('#form').validate() && this.user.firstName !== null && this.user.lastName !== null;
+				this.registerDisabled = this.showNameEdit ?  !formValid : false;
+			},
+			_locationsLoaded: function(){
+				if(!this.locations){
+					this.locations = [];
+				}
+				this.unshift('locations', {id: 'online', name: 'Online'});
+			},
+			_selectedLocationChanged(selectedLocation){
+				this.showNameEdit = (!!selectedLocation && selectedLocation.value !== 'online');
+				this._updateRegisterDisabled();
+			},
 			toggle: function(challenge){
 				this.$$('my-teams-provider').refresh();
 				this.challenge = challenge;
+				this.$$('locations-by-challenge-canonical-name-provider').refresh();
 				this.$.registerToChallengeModal.toggle();
 			},
 			_goToCreateTeam: function(){
@@ -86,8 +157,24 @@
 				this.unshift('teams', {canonicalName: '', name: 'No team'});
 			},
 			_register: function(){
-				this.$.registerRequest.body = {team: this.selectedTeam ? this.selectedTeam.value : ''};
+				this.$.registerRequest.body = {
+					team: this.selectedTeam ? this.selectedTeam.value : '',
+					location: this.selectedLocation ? (this.selectedLocation.value === 'online' ? '' : this.selectedLocation.value) : ''};
+				if(this.selectedLocation.value === 'online'){
+					this.$.registerRequest.generateRequest();
+					return;
+				}
+				console.log(this.user, this._getCurrentUser())
+				this.$.updateUser.body = this.user;
+				this.$.updateUser.url = util.build('/user');
+				this.$.updateUser.generateRequest();
+			},
+			_onResponse: function(){
 				this.$.registerRequest.generateRequest();
+			},
+			_onError: function(){
+				this.$.toast.text = 'There was a problem when trying update your user. Please try again later.';
+				this.$.toast.show();
 			},
 			_onRequestFinished: function(e){
 				e.stopPropagation();
