--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -140,6 +140,8 @@
 
 <link rel="import" href="common/skill/skill-polygon.html">
 
+<link rel="import" href="common/social/social-components.html">
+
 <link rel="import" href="common/wizard/base-wizard.html">
 
 <link rel="import" href="company/candidate/invite/invite-candidate-input.html">
