Fix login animation (#292)

--- a/app/elements/common/login/login-page-password/login-page-password.html
+++ b/app/elements/common/login/login-page-password/login-page-password.html
@@ -73,6 +73,9 @@ Polymer({
 			type: String,
 			notify: true,
 			reflectToAttribute: true
+		},
+		externalWidget: {
+			value: false
 		}
 	},
 	next: function() {
@@ -87,7 +90,10 @@ Polymer({
 		}
 	},
 	focus: function() {
-		this.$.passwordInput.focus();
+		var self = this;
+		setTimeout(function(){
+			self.$.passwordInput.focus();
+		}, 500);
 	}
 });
 </script>
