--- a/app/elements/common/login/login-page-email/login-page-email.html
+++ b/app/elements/common/login/login-page-email/login-page-email.html
@@ -67,6 +67,9 @@ Polymer({
 		empty: {
 			type: String,
 			notify: true
+		},
+		externalWidget: {
+			value: false
 		}
 	},
 	behaviors: [
@@ -105,7 +108,10 @@ Polymer({
 		}
 	},
 	focus: function(){
-		this.$.emailInput.focus();
+		var self = this;
+		setTimeout(function(){
+			self.$.emailInput.focus();
+		}, 500);
 	}
 });
 </script>
