--- a/app/elements/coder/code-editor/code-editor.html
+++ b/app/elements/coder/code-editor/code-editor.html
@@ -1,6 +1,3 @@
-
-<link rel="import" href="file-explorer/explorer-item.html">
-<link rel="import" href="file-explorer/context-menu.html">
 <dom-module id="code-editor">
 	<style include="iron-flex">
 		:host {
@@ -38,6 +35,7 @@
 			</div>
 		</div>
 	</template>
+	<script src="../../../scripts/tree.js" type="application/javascript"></script>
 	<script src="../../../bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
 	<script src="../../../bower_components/ace-min-noconflict/theme-chrome.js" type="application/javascript"></script>
 	<script src="../../../bower_components/ace-min-noconflict/ext-language_tools.js" type="application/javascript"></script>
