--- a/app/elements/coder/code-editor/template-chooser.html
+++ b/app/elements/coder/code-editor/template-chooser.html
@@ -1,6 +1,6 @@
-<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="/bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="/bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../../../bower_components/paper-menu/paper-menu.html">
 
 <dom-module id="template-chooser">
 	<style include="iron-flex iron-flex-alignment">
