--- a/app/elements/coder/code-editor/file-explorer/context-menu.html
+++ b/app/elements/coder/code-editor/file-explorer/context-menu.html
@@ -1,5 +1,5 @@
-<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../../bower_components/iron-icon/iron-icon.html">
 
 <dom-module id="context-menu">
 	<template>
