--- a/app/elements/coder/challenge/info/challenge-info-page.html
+++ b/app/elements/coder/challenge/info/challenge-info-page.html
@@ -17,12 +17,18 @@
 		}
 		.horizontal-layout {
 			@apply(--layout-horizontal);
+			@apply(--layout-end);
 		}
 		.icon-text {
 			padding: 0 32px 0px 4px;
 		}
 		paper-button {
 			@apply(--layout-self-center);
+		}
+
+		#zoomIcon {
+			position: relative;
+			bottom: -10px;
 		}
 	</style>
 	<template>
@@ -59,6 +65,15 @@
 					<paper-button raised on-click="_onStart">Start</paper-button>
 				</template>
 			</div>
+			<template is="dom-if" if="[[showLocation]]">
+				<div class="horizontal-layout">
+					<iron-icon icon="communication:location-on"></iron-icon>
+					<span class="icon-text">{{status.location.name}}</span>
+					<div class="flex"></div>
+					<paper-icon-button id="zoomIcon" icon="[[locationIcon]]" on-click="_toggleLocation"></paper-icon-button>
+				</div>
+			</template>
+			<google-location-viewer id="locationViewer" location="[[status.location]]"></google-location-viewer>
 			<render-markdown markdown="{{challenge.description}}"></render-markdown>
 		</paper-material>
 	</template>
@@ -79,7 +94,7 @@
 					this.showDuration = true;
 				}
 				if(!!challenge.startDate){
-					this.startTime = this._getTime(challenge.startDate)
+					this.startTime = this._getTime(challenge.startDate);
 					this.startDate = this._getDate(challenge.startDate);
 					this.showStartDate = true;
 				}
@@ -122,6 +137,11 @@
 						this.actionText = 'See results';
 						break;
 				}
+				this.$.locationViewer.hide();
+				if (!!status.location) {
+					this.showLocation = true;
+					this.locationIcon = 'zoom-in';
+				}
 			},
 			_onAction: function(){
 				switch(this.status.status){
@@ -149,6 +169,15 @@
 			refresh: function(){
 				this.$$('user-status-for-challenge-provider').refresh();
 			},
+			_toggleLocation: function() {
+				if (this.locationIcon === 'zoom-in') {
+					this.locationIcon = 'zoom-out';
+					this.$.locationViewer.show();
+				} else {
+					this.locationIcon = 'zoom-in';
+					this.$.locationViewer.hide();
+				}
+			}
 		});
 	</script>
 </dom-module>
