--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -121,6 +121,7 @@
 
 <link rel="import" href="common/location/short-removable-location.html">
 <link rel="import" href="common/location/google-location-finder.html">
+<link rel="import" href="common/location/google-location-viewer.html">
 
 <link rel="import" href="common/markdown/render-markdown.html">
 
