--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -17,7 +17,8 @@ window.addEventListener('WebComponentsReady', function() {
 			} else {
 				page('/login');
 			}
-		}
+		};
+		app.customUserOk();
 	});
 
 	page('/settings', function() {
